@@ -1,3 +1,7 @@
+2006-04-14  Bernhard Kraft  <kraftb@kraftb.at>
+
+	* Fixed bug #3232: Use image format set via .format for GIFBUILDER images
+
 2006-04-13  Stanislas Rolland  <stanislas.rolland@fructifor.ca>
 
 	* Fix bugtracker issue 3172: re-write getMimeType in t3lib_htmlmail
